<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:gravity="center_vertical"
        android:scaleType="fitXY"
        android:src="@drawable/stage_curtains" />

    <ImageButton
        android:id="@+id/imageButtonArrowUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextTitle3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:padding="10dp"
        android:src="@drawable/arrow" />

    <ImageButton
        android:id="@+id/imageButtonArrowDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBottom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:padding="10dp"
        android:src="@drawable/arrow_reverse" />

    <TextView
        android:id="@+id/textBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textMiddle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/stats"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#6B6A6A" />

    <TextView
        android:id="@+id/textMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:onClick="menuClick"
        android:text="@string/start"
        android:textColor="#FFFFFF"
        android:textSize="26dp" />

    <TextView
        android:id="@+id/textTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButtonArrowUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#6B6A6A" />

    <TextView
        android:id="@+id/textTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/title1"
        android:textColor="#FFFFFF"
        android:textSize="64sp" />

    <TextView
        android:id="@+id/TextTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitle1"
        android:layout_marginTop="-15dp"
        android:layout_toLeftOf="@+id/imageButtonArrowUp"
        android:text="@string/title2"
        android:textColor="#FFFFFF"
        android:textSize="44sp" />

    <TextView
        android:id="@+id/TextTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextTitle2"
        android:layout_alignBottom="@+id/TextTitle2"
        android:layout_toRightOf="@+id/imageButtonArrowUp"
        android:text="@string/title3"
        android:textColor="#FFFFFF"
        android:textSize="44sp" />

</RelativeLayout>